[gd_scene load_steps=5 format=3 uid="uid://c44jqg80c8bog"]

[ext_resource type="Script" path="res://worldobjects/battle/construction/construction.gd" id="1_vyrxq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yr2dw"]
radius = 80.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_38r8l"]
bg_color = Color(0.376471, 0.698039, 0, 1)

[sub_resource type="Theme" id="Theme_by4nw"]
ProgressBar/styles/fill = SubResource("StyleBoxFlat_38r8l")

[node name="Construction" type="Node2D"]
script = ExtResource("1_vyrxq")
type = "construction"

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_yr2dw")
debug_color = Color(0.27451, 0.631373, 0, 0.419608)

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -130.0
offset_top = -160.0
offset_right = 130.0
offset_bottom = -108.0
theme = SubResource("Theme_by4nw")

[connection signal="hps_changed" from="." to="." method="_on_hps_changed"]
